# didtoolbox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  THIRD-PARTY-LICENSES.md  build.rs  didtoolbox-0.1.0.spdx.json  didtoolbox.spdx.json  kotlin-build.sh  python-build.sh  uniffi.toml
.github/workflows/: README.md  benchmarks.yml  build-and-test.yml  build.yml  clippy.yml  osv-scanner.yml  rust-benchmarks.yml  rust-clippy.yml
benches/: didtoolbox_benchmark.rs
criterion/: README.md
criterion/did_tdw/TrustDidWeb_read/10/base/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/10/change/: estimates.json
criterion/did_tdw/TrustDidWeb_read/10/new/: estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/10/report/: index.html
criterion/did_tdw/TrustDidWeb_read/100/base/: estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/100/change/: estimates.json
criterion/did_tdw/TrustDidWeb_read/100/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/100/report/: index.html
criterion/did_tdw/TrustDidWeb_read/200/base/: sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/200/change/: estimates.json
criterion/did_tdw/TrustDidWeb_read/200/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/200/report/: index.html
criterion/did_tdw/TrustDidWeb_read/300/base/: estimates.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/300/change/: estimates.json
criterion/did_tdw/TrustDidWeb_read/300/new/: benchmark.json  sample.json
criterion/did_tdw/TrustDidWeb_read/300/report/: index.html
criterion/did_tdw/TrustDidWeb_read/400/base/: sample.json
criterion/did_tdw/TrustDidWeb_read/400/change/: estimates.json
criterion/did_tdw/TrustDidWeb_read/400/new/: benchmark.json  estimates.json  tukey.json
criterion/did_tdw/TrustDidWeb_read/400/report/: index.html
criterion/did_tdw/TrustDidWeb_read/report/: index.html
criterion/did_tdw/report/: index.html
criterion/did_tdw_jsonschema/10/report/: index.html
criterion/did_tdw_jsonschema/100/report/: index.html
criterion/did_tdw_jsonschema/200/report/: index.html
criterion/did_tdw_jsonschema/300/report/: index.html
criterion/did_tdw_jsonschema/400/report/: index.html
criterion/did_tdw_jsonschema/5/report/: index.html
criterion/did_tdw_jsonschema/50/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate (sequential)/report/: index.html
criterion/did_tdw_jsonschema/DidLogEntryValidator_validate/report/: index.html
criterion/did_tdw_jsonschema/report/: index.html
criterion/report/: index.html
did_server/: main.py  playground.py
src/: LICENSE.md  custom_jsonschema_keywords.rs  did_tdw.rs  did_tdw_jsonschema.rs  did_tdw_parameters.rs  didtoolbox.rs  didtoolbox.udl  ed25519.rs  errors.rs  jcs_sha256_hasher.rs  lib.rs  multibase.rs  ssi_dids.rs  trustdidweb.rs  trustdidweb.udl  utils.rs  vc_data_integrity.rs
src/embed/jsonschema/: README.md  did_log_jsonschema_v_0_3.json  did_log_jsonschema_v_0_3_BIT_conform.json  did_log_jsonschema_v_0_3_eid_conform.json
test_data/: example_did.jsonl
test_data/generated_by_didtoolbox_java/: README.md  did_1.jsonl  did_2.jsonl  did_3.jsonl  empty_did_params.jsonl  tdw-js.jsonl  v005_did.jsonl  v010_did.jsonl  v050_did.jsonl  v100_did.jsonl  v200_did.jsonl  v300_did.jsonl  v400_did.jsonl
test_data/generated_by_didtoolbox_java/legacy/: README.md  did-1.0.0-RC1.jsonl  did-1.0.0.jsonl  did-1.1.0.jsonl  did-1.2.0.jsonl  did-1.3.0.jsonl  did-1.3.1.jsonl  did-1.4.0.jsonl  did-1.4.1.jsonl
test_data/generated_by_didtoolbox_java/unhappy_path/: descending_version_datetime_did.jsonl  inconsecutive_version_numbers_did.jsonl  invalid_initial_version_number_did.jsonl  version_time_in_the_future_did.jsonl
test_data/generated_by_didtoolbox_java/v_0_3_eid_conform/: did_doc_without_controller.jsonl
test_data/generated_by_tdw_js/: already_deactivated.jsonl  alternate_update_keys.jsonl  deactivated.jsonl  single_update_key.jsonl  unique_update_keys.jsonl
test_data/generated_by_tdw_js/unhappy_path/: not_authorized.jsonl
(+130 files in other folders)
