[package]
name = "didtoolbox"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Toolbox containing did:tdw"
authors = ["Frithjof Hoppe", "Vladica Stojic"]
homepage = "https://github.com/e-id-admin/didtoolbox"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.28.3", features = ["cli"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
serde_jcs = "0.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
base64 = "0.22.1"
sha2 = "0.10.8"
hex-literal = "0.4.1"
hex = "0.4.3"
base32 = "0.5.0"
regex = "1.11.1"
url-escape = "0.1.1"
bs58 = { version = "0.5.1", features = ["check", "cb58"] }
ssi = { version = "0.10.0", features = ["example", "http-did"] }
thiserror = "2.0.3"

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[dev-dependencies]
rstest = "0.23.0"
mockito = "1.6.1"
ureq = "2.10.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "didtoolbox"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
