[package]
name = "didtoolbox"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "Toolbox containing did:tdw"
authors = ["Frithjof Hoppe", "Vladica Stojic"]
homepage = "https://github.com/swiyu-admin-ch/didtoolbox"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.28.3", features = ["cli"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
serde_json_canonicalizer = "0.3.0"
chrono = { version = "0.4.39", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
regex = "1.11.1"
url-escape = "0.1.1"
bs58 = { version = "0.5.1", features = ["check", "cb58"] }
thiserror = "2.0.11"
url = "2.5.4"
jsonschema = { version = "0.30.0" }
rust-embed = { version = "8.7.2" , features = ["include-exclude", "compression"]}

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[dev-dependencies]
rstest = "0.25.0"
#mockito = "1.6.1"
#ureq = "2.10.1"
criterion = "0.5.1"

[[bench]]
name = "didtoolbox_benchmark"
harness = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "didtoolbox"
#path = "src/lib.rs" # `cargo readme` command insist on it

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
