[package]
name = "didtoolbox"
version = "2.1.1"
edition = "2021"
license = "MIT"
description = "A set of tools required to implement Trust DID Web - did:tdw - v0.3 specification"
authors = ["Frithjof Hoppe", "Vladica Stojic"]
homepage = "https://github.com/swiyu-admin-ch/didtoolbox"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = { version = "0.28.3", features = ["cli"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8.5"
hex = "0.4.3"
regex = "1.11.1"
url-escape = "0.1.1"
thiserror = "2.0.12"
url = "2.5.4"
rust-embed = { version = "8.7.2" , features = ["include-exclude", "compression"]}
rayon = "1.10.0"
did_sidekicks = { git = "https://github.com/swiyu-admin-ch/did-sidekicks.git", branch = "main" }
#did_sidekicks = { path = "../did-sidekicks" }

[build-dependencies]
uniffi = { version = "0.28.3", features = ["build"] }

[dev-dependencies]
rstest = "0.25.0"
criterion = "0.6.0"

[[bench]]
name = "didtoolbox_benchmark"
harness = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "didtoolbox"
#path = "src/lib.rs" # `cargo readme` command insist on it

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
